--- a/garden_games/Cargo.toml
+++ b/garden_games/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
-name = "garden_sdl_example"
+name = "garden_games"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+garden = { path = "../garden" }
