--- a/garden_glutin_example/Cargo.toml
+++ b/garden_glutin_example/Cargo.toml
@@ -6,4 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+garden = { path = "../garden" }
+garden_content = { path = "../garden_content" }
+garden_games = { path = "../garden_games" }
 garden_glutin = { path = "../garden_glutin" }
+garden_winit = { path = "../garden_winit" }
+winit = "0.27.5"
