--- a/garden_winit/Cargo.toml
+++ b/garden_winit/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "garden_glutin"
+name = "garden_winit"
 version = "0.1.0"
 edition = "2021"
 
@@ -9,12 +9,5 @@ edition = "2021"
 garden = { path = "../garden" }
 garden_content = { path = "../garden_content" }
 garden_games = { path = "../garden_games" }
-garden_winit = { path = "../garden_winit" }
-glutin = "0.30.1"
 winit = "0.27.5"
-glutin-winit = "0.2.1"
-raw-window-handle = "0.5.0"
-
-[build-dependencies]
-gl_generator = "0.14"
-cfg_aliases = "0.1.1"
+mockall = "0.11.3"
