--- a/garden_glutin/Cargo.toml
+++ b/garden_glutin/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 garden = { path = "../garden" }
 garden_content = { path = "../garden_content" }
+garden_content_loading = { path = "../garden_content_loading" }
 garden_games = { path = "../garden_games" }
 garden_winit = { path = "../garden_winit" }
 glutin = "0.30.1"
