--- a/garden_json/Cargo.toml
+++ b/garden_json/Cargo.toml
@@ -1,11 +1,9 @@
 [package]
-name = "garden_content_loading"
+name = "garden_json"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-garden_content = { path = "../garden_content" }
-garden_json = { path = "../garden_json" }
 serde_json = "1.0.89"
