--- a/garden_glutin_example_1/Cargo.toml
+++ b/garden_glutin_example_1/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "garden_glutin_example"
+name = "garden_glutin_example_1"
 version = "0.1.0"
 edition = "2021"
 
@@ -7,3 +7,4 @@ edition = "2021"
 
 [dependencies]
 garden_glutin = { path = "../garden_glutin" }
+garden_winit = { path = "../garden_winit" }
