--- a/garden/Cargo.toml
+++ b/garden/Cargo.toml
@@ -7,3 +7,8 @@ edition = "2021"
 
 [dependencies]
 mockall = "0.11.3"
+glutin = "0.30.1"
+
+[build-dependencies]
+gl_generator = "0.14"
+cfg_aliases = "0.1.1"
