--- a/garden_content_component/Cargo.toml
+++ b/garden_content_component/Cargo.toml
@@ -10,3 +10,4 @@ garden = { path = "../garden" }
 garden_winit = { path = "../garden_winit" }
 garden_content = { path = "../garden_content" }
 garden_content_loading = { path = "../garden_content_loading" }
+garden_loading = { path = "../garden_loading" }
