--- a/garden_glutin_example_2/Cargo.toml
+++ b/garden_glutin_example_2/Cargo.toml
@@ -10,3 +10,4 @@ garden_games = { path = "../garden_games" }
 garden_glutin = { path = "../garden_glutin" }
 garden_winit = { path = "../garden_winit" }
 garden_content_component = { path = "../garden_content_component" }
+garden_scenes_component = { path = "../garden_scenes_component" }
