Scale content to the scene

--- a/garden_content_component/Cargo.toml
+++ b/garden_content_component/Cargo.toml
@@ -11,3 +11,4 @@ garden_winit = { path = "../garden_winit" }
 garden_content = { path = "../garden_content" }
 garden_content_loading = { path = "../garden_content_loading" }
 garden_loading = { path = "../garden_loading" }
+garden_scenes = { path = "../garden_scenes" }
