--- a/garden_scenes_loading/Cargo.toml
+++ b/garden_scenes_loading/Cargo.toml
@@ -10,3 +10,6 @@ garden_json = { path = "../garden_json" }
 garden_loading = { path = "../garden_loading" }
 garden_scenes = { path = "../garden_scenes" }
 serde_json = "1.0.89"
+
+[dev-dependencies]
+mockall = "0.11.3"
