--- a/garden_glutin_example_2/Cargo.toml
+++ b/garden_glutin_example_2/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 garden_games = { path = "../garden_games" }
 garden_glutin = { path = "../garden_glutin" }
+garden_json = { path = "../garden_json" }
 garden_winit = { path = "../garden_winit" }
 garden_content_component = { path = "../garden_content_component" }
 garden_scenes_component = { path = "../garden_scenes_component" }
