--- a/garden_scenes_component/Cargo.toml
+++ b/garden_scenes_component/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 garden = { path = "../garden" }
 garden_loading = { path = "../garden_loading" }
-garden_json = { path = "../garden_json" }
+garden_json_component = { path = "../garden_json_component" }
 garden_scenes = { path = "../garden_scenes" }
 garden_scenes_loading = { path = "../garden_scenes_loading" }
 garden_winit = { path = "../garden_winit" }
