Reuse json converters

--- a/garden_content_component/Cargo.toml
+++ b/garden_content_component/Cargo.toml
@@ -10,5 +10,6 @@ garden = { path = "../garden" }
 garden_winit = { path = "../garden_winit" }
 garden_content = { path = "../garden_content" }
 garden_content_loading = { path = "../garden_content_loading" }
+garden_json_component = { path = "../garden_json_component" }
 garden_loading = { path = "../garden_loading" }
 garden_scenes = { path = "../garden_scenes" }
