--- a/garden_scenes_loading/Cargo.toml
+++ b/garden_scenes_loading/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+garden = { path = "../garden" }
 garden_json = { path = "../garden_json" }
 garden_loading = { path = "../garden_loading" }
 garden_scenes = { path = "../garden_scenes" }
