--- a/garden_maths/Cargo.toml
+++ b/garden_maths/Cargo.toml
@@ -1,13 +1,8 @@
 [package]
-name = "garden_content"
+name = "garden_maths"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-garden = { path = "../garden" }
-garden_maths = { path = "../garden_maths" }
-
-[dev-dependencies]
-mockall = "0.11.3"
