Add maths component

--- a/garden_maths_component/Cargo.toml
+++ b/garden_maths_component/Cargo.toml
@@ -1,11 +1,9 @@
 [package]
-name = "garden_maths"
+name = "garden_maths_component"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-
-[dev-dependencies]
-rstest = "0.16.0"
+garden_maths = { path = "../garden_maths" }
