--- a/garden_glutin_example_1/Cargo.toml
+++ b/garden_glutin_example_1/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2021"
 [dependencies]
 garden_glutin = { path = "../garden_glutin" }
 garden_winit = { path = "../garden_winit" }
+garden_games = { path = "../garden_games" }
