--- a/garden_games/Cargo.toml
+++ b/garden_games/Cargo.toml
@@ -7,6 +7,9 @@ edition = "2021"
 
 [dependencies]
 garden = { path = "../garden" }
+garden_glutin = { path = "../garden_glutin" }
+garden_winit = { path = "../garden_winit" }
+winit = "0.27.5"
 
 [dev-dependencies]
 mockall = "0.11.3"
