--- a/garden_sections_component/Cargo.toml
+++ b/garden_sections_component/Cargo.toml
@@ -1,14 +1,9 @@
 [package]
-name = "garden_winit"
+name = "garden_sections_component"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-garden = { path = "../garden" }
-garden_content = { path = "../garden_content" }
-winit = "0.27.5"
-
-[dev-dependencies]
-mockall = "0.11.3"
+garden_sections = { path = "../garden_sections" }
